syntax = "proto3";

service Cinema {
    rpc Req(CinemaRequest) returns (CinemaResponse) {}
}

message CinemaRequest {
    string column = 1;
    string value = 2;
}

message CinemaData {
    string name = 1;
    int32 rows = 2;
    int32 rowLength = 3;
}

message CinemaResponse {
    repeated CinemaData data = 1;
}

service Movie {
    rpc Req(MovieRequest) returns (MovieResponse) {}
}

message MovieRequest {
    string column = 1;
    string value = 2;
}

message MovieData {
    string title = 1;
}

message MovieResponse {
    repeated MovieData data = 1;
}

service Reservation {
    rpc Req(ReservationRequest) returns (ReservationResponse) {}
}

message ReservationRequest {
    string column = 1;
    string value = 2;
}

message ReservationData {
    string title = 1;
}

message ReservationResponse {
    repeated ReservationData data = 1;
}

service Showing {
    rpc Req(ShowingRequest) returns (ShowingResponse) {}
}

message ShowingRequest {
    string column = 1;
    string value = 2;
}

message ShowingData {
    string title = 1;
}

message ShowingResponse {
    repeated ShowingData data = 1;
}

service User {
    rpc Req(UserRequest) returns (UserResponse) {}
}

message UserRequest {
    string column = 1;
    string value = 2;
}

message UserData {
    string title = 1;
}

message UserResponse {
    repeated UserData data = 1;
}




